--- a/.jshintrc
+++ b/.jshintrc
@@ -20,7 +20,9 @@
 	"globals": { // Globals variables.
 		"jasmine": true,
 		"angular": true,
-		"ApplicationConfiguration": true
+		"ApplicationConfiguration": true,
+		"toastr": true,
+		"AWS": true
 	},
 	"predef": [ // Extra globals.
 		"define",
